@@ -509,4 +509,7 @@
           - elm_win_floating_mode_set
           - elm_win_floating_mode_get
 
+2012-09-14  Shinwoo Kim (kimcinoo)
+
+	* Fix info field set for bubble widget.
 
